inclusao de api key e test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,18 +11,7 @@ quarkus.datasource.jdbc.max-size=10
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQLDialect
 
-# Configuração do SmallRye OpenAPI
-quarkus.smallrye-openapi.path=/openapi
-quarkus.smallrye-openapi.ui.path=/swagger-ui
-
-# Ativando o Swagger UI com o SmallRye OpenAPI
-quarkus.smallrye-openapi.ui.enabled=true
-
+# Disponibilizando swagger em produção
 quarkus.swagger-ui.always-include=true
 
-# Ativar Swagger UI e configurar caminhos
-quarkus.swagger-ui.path=/swagger-ui
-
-# Configuração do OpenAPI
-quarkus.openapi.path=/openapi
-
+altbank.api.key=U4GzGJwUm5V7iSpgPZqehqbXNIJAx3nL3iYJ2x+XN9s=
