criacao da primeira versão do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.datasource.jdbc.url=jdbc:mysql://mysql:3306/altbank
 quarkus.datasource.jdbc.max-size=10
 
 # Configuração do Hibernate ORM
-quarkus.hibernate-orm.database.generation=update
+#quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQLDialect
 
 # Disponibilizando swagger em produção
