--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,5 +8,5 @@ quarkus.datasource.password=test
 quarkus.datasource.jdbc.max-size=10
 
 # Configuração do Hibernate ORM
-quarkus.hibernate-orm.database.generation=update
+#quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQLDialect
