--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - altbank-network
 
   altbank-app:
+    env_file:
+      - .env
     build:
       context: .
       dockerfile: src/main/docker/Dockerfile.jvm
