--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,13 @@ quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQLDialect
 # Disponibilizando swagger em produção
 quarkus.swagger-ui.always-include=true
 
-altbank.api.key=U4GzGJwUm5V7iSpgPZqehqbXNIJAx3nL3iYJ2x+XN9s=
+altbank.api.key=${altbank.api.key}
+
+quarkus.log.level=DEBUG
+quarkus.log.category."org.hibernate".level=DEBUG
+quarkus.log.category."io.quarkus".level=DEBUG
+
+quarkus.hibernate-orm.packages=br.com.altbank.entity
+
+quarkus.rest-client."br.com.altbank.resource.CardResourceClient".url=http://localhost:8080
+
