inclusao de test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,22 @@
-# Configuração para o ambiente de teste com banco H2
+# Desativa qualquer tentativa de conexão com banco de dados real
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-quarkus.datasource.username=test
-quarkus.datasource.password=test
+quarkus.datasource.username=sa
+quarkus.datasource.password=
 
-# Configuração de pool de conexões (opcional, mas recomendado)
-quarkus.datasource.jdbc.max-size=10
+# Desabilita scripts de importação de dados durante os testes
+quarkus.hibernate-orm.sql-load-script=no-file
 
-# Configuração do Hibernate ORM
-#quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQLDialect
+# Geração de banco de dados (opcional para testes unitários puros, evita criação automática de tabelas)
+quarkus.hibernate-orm.database.generation=none
+
+# Reduz verbosidade dos logs durante os testes
+quarkus.log.level=ERROR
+quarkus.log.category."org.hibernate".level=ERROR
+quarkus.log.category."io.quarkus".level=ERROR
+
+# Configurações opcionais de pool de conexões
+quarkus.datasource.jdbc.max-size=1
+
+# Evita erro caso nenhuma entidade seja encontrada durante os testes unitários
+quarkus.hibernate-orm.active=false
