--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./src/main/resources/import.sql:/docker-entrypoint-initdb.d/import.sql:ro
+      - ./init-scripts:/docker-entrypoint-initdb.d
     networks:
       - altbank-network
 
