--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,15 @@
             <artifactId>quarkus-rest-jackson</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-junit5</artifactId>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.5.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -100,6 +107,11 @@
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.agent</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -157,20 +169,22 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
+            <!-- Plugin para cobertura de testes com JaCoCo -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.12</version>
+                <version>0.8.10</version> <!-- Certifique-se de usar a última versão -->
                 <executions>
+                    <!-- Gera relatório após os testes -->
                     <execution>
-                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+                    <!-- Gera relatórios no formato HTML, XML e CSV -->
                     <execution>
                         <id>report</id>
-                        <phase>test</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -190,6 +204,7 @@
             </activation>
             <properties>
                 <skipITs>false</skipITs>
+                <skipTests>false</skipTests>
                 <quarkus.native.enabled>true</quarkus.native.enabled>
             </properties>
         </profile>
